[gd_scene load_steps=4 format=3 uid="uid://dskvbwy6j0rd6"]

[ext_resource type="Theme" uid="uid://hpwvqqmbxmcc" path="res://Sauce/Theme/ThemeGame.tres" id="1_3vqo5"]
[ext_resource type="Script" path="res://Scripts/UIFinishLevel.gd" id="1_fcddn"]
[ext_resource type="PackedScene" uid="uid://cakwlqgjrf5w1" path="res://Prefabs/UI/UITrashCans.tscn" id="2_68pxp"]

[node name="UIFinishLevel" type="CanvasLayer"]
layer = 2
script = ExtResource("1_fcddn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3vqo5")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -119.0
offset_right = 120.5
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="Finish Level" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 16.0
offset_right = 89.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Level Finished!"

[node name="TrashCans" parent="Control/Panel" instance=ExtResource("2_68pxp")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 54.5
offset_right = 55.0
offset_bottom = 95.5
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(55, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -94.0
offset_right = 65.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Restart" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Main menu"

[connection signal="button_down" from="Control/Panel/VBoxContainer/Restart" to="." method="button_restart"]
[connection signal="button_down" from="Control/Panel/VBoxContainer/MainMenu" to="." method="button_mainmenu"]
